<resources>
    <string name="app_name">Maxipe</string>
    <string name="title_activity_aba_opcoes">AbaOpcoes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">MAXIPE</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main_item_aba_add_aux">MainItemAbaAddAux</string>
    <string name="title_activity_main_aba_opcoes">MainAbaOpcoes</string>
    <string name="title_activity_main_aba_opcoes__menu_aux">MainAbaOpcoes_Menu_aux</string>
    <string name="usuario_invalido">Email e/ou senha inválido(s)</string>
    <string name="erro_cadastro_email">Erro ao cadastrar responsável, email já cadastrado</string>
    <string name="erro_cadastro">Erro ao cadastrar</string>
    <string name="email_ja_cadastrado">Email já cadastrado</string>
    <string name="cadastro_sucesso">Cadastrado realizado com sucesso</string>
    <string name="video_sucesso">Video gravado com sucesso!!</string>
    <string name="erro_video">Erro na gravação do vídeo!!</string>
    <string name="informacao">CÓDIGO PARA CADASTRAR AUXILIADO</string>
    <string name="codigo_gerado"><![CDATA[]]></string>
    <string name="ok">OK</string>
    <string name="salva_config">Salvo com sucesso!</string>
    <string name="cara_feliz">:)</string>
    <string name="lembrete_cadastrado">Lembrete cadastrado com sucesso!</string>
    <string name="erro_cadastro_lembrete">Erro no cadastro do lembrete</string>
    <string name="erro_cadastro_aux">Erro ao cadastrar auxiliado</string>
    <string name="nome_invalido">Nome inválido</string>
    <string name="email_invalido">Email inválido</string>
    <string name="aux_cadatro">Auxiliado cadastrado com sucesso</string>
    <string name="excluir_lembrete">Tem certeza que deseja excluir o lembrete?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="alerta">ALERTA</string>
    <string name="email_existente">Email já existente</string>
    <string name="telefone_existente">Telefone já existente</string>
    <string name="titulo_preenchido">Este campo deve ser preenchido</string>
    <string name="deseja_cancelar_o_alarme">Deseja cancelar o Alarme?</string>
    <string name="lembrete_modificado">Lembrete modificado com sucesso</string>
    <string name="erro_atualizacao_lembrete">Erro na atualização do lembrete</string>
    <string name="lembrete_existente">Lembrete já existente</string>
    <string name="nao_cadastro_aux">Não é possível cadastrar outro auxiliado</string>
    <string name="codigo_nao_cadastrado">Código não cadastado</string>
    <string name="data_invalida">Data Inválida</string>
    <string name="hora_invalida">Horário Inválido</string>
    <string name="precisa_cadastrar_aux">Você precisa cadastrar um auxiliado primeiro</string>
</resources>
